rust_compiler/libs/integration_tests/src/snapshots/integration_tests__integration_tests__larre_script.snap
---
source: libs/integration_tests/src/lib.rs
expression: output
---
## Unoptimized Output

j main
waitForIdle:
push sp
push ra
yield
__internal_L2:
l r1 d0 Idle
seq r1 r1 0
beqz r1 __internal_L3
yield
j __internal_L2
__internal_L3:
__internal_L1:
pop ra
pop sp
j ra
deposit:
push sp
push ra
s d0 Setting 1
jal waitForIdle
move r1 r15
s d0 Activate 1
jal waitForIdle
move r1 r15
s d1 Open 0
__internal_L4:
pop ra
pop sp
j ra
checkAndHarvest:
pop r8
push sp
push ra
sle r2 r8 1
ls r1 d0 255 Seeding
slt r1 r1 1
or r1 r2 r1
beqz r1 __internal_L6
j __internal_L5
__internal_L6:
__internal_L7:
ls r1 d0 255 Mature
beqz r1 __internal_L8
yield
s d0 Activate 1
j __internal_L7
__internal_L8:
ls r2 d0 255 Occupied
s d0 Setting 1
push r8
push r2
jal waitForIdle
pop r2
pop r8
move r1 r15
push r8
push r2
jal deposit
pop r2
pop r8
move r1 r15
beqz r2 __internal_L9
push r8
push r2
jal deposit
pop r2
pop r8
move r1 r15
__internal_L9:
s d0 Setting r8
push r8
push r2
jal waitForIdle
pop r2
pop r8
move r1 r15
ls r1 d0 0 Occupied
beqz r1 __internal_L10
s d0 Activate 1
__internal_L10:
push r8
push r2
jal waitForIdle
pop r2
pop r8
move r1 r15
__internal_L5:
pop ra
pop sp
j ra
main:
move r3 0
__internal_L11:
yield
l r1 d0 Idle
seq r1 r1 0
beqz r1 __internal_L13
j __internal_L11
__internal_L13:
add r1 r3 1
sgt r2 r1 19
add r1 r3 1
select r2 r2 2 r1
push r3
push r2
push r3
jal checkAndHarvest
pop r2
pop r3
move r1 r15
s d0 Setting r2
move r3 r2
j __internal_L11
__internal_L12:

## Optimized Output

j 74
push sp
push ra
yield
l r1 d0 Idle
bne r1 0 8
yield
j 4
pop ra
pop sp
j ra
push sp
push ra
s d0 Setting 1
jal 1
s d0 Activate 1
jal 1
move r1 r15
s d1 Open 0
pop ra
pop sp
j ra
pop r8
push sp
push ra
sle r2 r8 1
ls r1 d0 255 Seeding
slt r1 r1 1
or r1 r2 r1
beqz r1 31
j 71
ls r1 d0 255 Mature
beqz r1 36
yield
s d0 Activate 1
j 31
ls r2 d0 255 Occupied
s d0 Setting 1
push r8
push r2
jal 1
pop r2
pop r8
push r8
push r2
jal 11
pop r2
pop r8
move r1 r15
beqz r2 56
push r8
push r2
jal 11
pop r2
pop r8
move r1 r15
s d0 Setting r8
push r8
push r2
jal 1
pop r2
pop r8
ls r1 d0 0 Occupied
beqz r1 65
s d0 Activate 1
push r8
push r2
jal 1
pop r2
pop r8
move r1 r15
pop ra
pop sp
j ra
move r3 0
yield
l r1 d0 Idle
bne r1 0 79
j 75
add r1 r3 1
sgt r2 r1 19
add r1 r3 1
select r2 r2 2 r1
push r3
push r2
push r3
jal 22
pop r2
pop r3
move r1 r15
s d0 Setting r2
move r3 r2
j 75
