rust_compiler/libs/integration_tests/src/snapshots/integration_tests__integration_tests__setbatched_with_member_access.snap
---
source: libs/integration_tests/src/lib.rs
expression: output
---
## Unoptimized Output

j main
main:
__internal_L1:
l r1 20088 Horizontal
sb -539224550 Horizontal r1
l r1 20088 Vertical
add r1 r1 90
sb -539224550 Vertical r1
yield
j __internal_L1
__internal_L2:

## Optimized Output

l r1 20088 Horizontal
sb -539224550 Horizontal r1
l r1 20088 Vertical
add r1 r1 90
sb -539224550 Vertical r1
yield
j 0
