rust_compiler/libs/integration_tests/src/snapshots/integration_tests__integration_tests__tuples.snap
---
source: libs/integration_tests/src/lib.rs
expression: output
---
## Unoptimized Output

j main
getSomethingElse:
pop r8
push sp
push ra
add r1 r8 1
move r15 r1
j __internal_L1
__internal_L1:
pop ra
pop sp
j ra
getSensorData:
push sp
push ra
l r1 d0 Vertical
push r1
l r1 d0 Horizontal
push r1
push 3
jal getSomethingElse
move r1 r15
push r1
sub r0 sp 5
get r0 db r0
move r15 r0
j __internal_L2
__internal_L2:
sub r0 sp 4
get ra db r0
j ra
main:
__internal_L3:
yield
jal getSensorData
pop r0
pop r1
pop r2
move sp r15
push r2
push r1
jal getSensorData
pop r0
pop r0
pop r1
move sp r15
pop r1
pop r2
s db Setting r1
j __internal_L3
__internal_L4:

## Optimized Output

j 23
pop r8
push sp
push ra
add r15 r8 1
pop ra
pop sp
j ra
push sp
push ra
l r1 d0 Vertical
push r1
l r1 d0 Horizontal
push r1
push 3
jal 1
move r1 r15
push r1
sub r0 sp 5
get r15 db r0
sub r0 sp 4
get ra db r0
j ra
yield
jal 8
pop r0
pop r1
pop r2
move sp r15
push r2
push r1
jal 8
pop r0
pop r0
pop r1
move sp r15
pop r1
pop r2
s db Setting r1
j 23
